test/programs/error-var-pattern-use-2.defs
(def (twice $x $x) constructor)